fixing an overflow issue of main background in menus pages

--- a/_animations.scss
+++ b/_animations.scss
@@ -7,7 +7,6 @@
     background: white;
     -webkit-background-clip : text;
     background-clip: text;
-    /*I don't know if I can use it, because it is not standard but I checked on caniuse and it seems ok...*/
     -webkit-text-fill-color : transparent;
     font-size: 1.5rem;
 }
@@ -177,6 +176,7 @@ input{
 .dish-select__animation{
   cursor: pointer;
   position: relative;
+
   &--25{
     &:before{
       @include price('25€')
@@ -228,6 +228,7 @@ input{
     padding: 1.5rem .9rem;
     border-top-right-radius: $border-radius;
     border-bottom-right-radius: $border-radius;
+    background: $tertiary;
     opacity: 0;
   }
 }
@@ -317,10 +318,10 @@ input{
 @keyframes dish-check{
   from{
     opacity: 0;
+    transform: rotate(90deg);
   }
   to{
     opacity: 1;
-    background-color: $tertiary;
   }
 }
 
